Adding Changes for New Lab functionality
